# coursework

./: .env.example  .gitignore  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
apps/buildings/: admin.py  factories.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/buildings/migrations/: 0001_initial.py
apps/groups/: admin.py  factories.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/groups/migrations/: 0001_initial.py  0002_initial.py  0003_studygroups_course_studygroups_faculty.py
apps/studies/: admin.py  choices.py  enums.py  export_utils.py  factories.py  models.py  schedule_generator.py  serializers.py  tests.py  urls.py  validators.py  views.py
apps/studies/management/commands/: generate_schedule.py
apps/studies/migrations/: 0001_initial.py  0002_initial.py  0003_scheduleoverride.py  0004_remove_subjects_schedule_subjectschedule_and_more.py  0005_remove_subjects_groups_remove_subjects_teachers_and_more.py  0006_remove_schedule_override.py  0007_remove_schedule_override.py
apps/users/: admin.py  choices.py  factories.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/users/management/commands/: populate_db.py
apps/users/migrations/: 0001_initial.py  0002_user_department_user_office_user_phone.py
compose/django/: Dockerfile  start
compose/nginx/: default.conf
compose/postgres/: Dockerfile
config/: celery_app.py  settings.py  urls.py
